# tg_channels_manager

./: .gitignore  .pre-commit-config.yaml  alembic.ini  pyproject.toml  setup.cfg
backend/alembic/: env.py
backend/alembic/versions/: 8edbecba01ba_initial.py
backend/src/: api.py  config.py  main.py
backend/src/auth/: schemas.py  security.py  views.py
backend/src/database/: core.py  dependencies.py  mixins.py  utils.py
backend/src/example/: views.py
backend/src/users/: dependencies.py  models.py  schemas.py  services.py  views.py
