[tool.black]
line-length = 100
target-version = ['py310']

[tool.poetry]
name = "tg_channels_manager"
version = "0.1.0"
description = ""
authors = ["vlad <irenfri@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
uvicorn = "^0.19.0"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
pre-commit = "^2.20.0"
mypy = "^0.982"
black = "^22.10.0"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
